...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="299dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:text="Prisijungti"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_regActivity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_regActivity"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/btn_regActivity"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/username"
            android:layout_width="352dp"
            android:layout_height="51dp"
            android:background="@color/clear"
            android:ems="40"
            android:hint="Įveskite Vartotojo vardą"
            android:inputType="text" />
...
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="347dp"
            android:layout_height="51dp"
            android:background="@color/clear"
            android:ems="15"
            android:hint="Įveskite Slaptažodį"
            android:inputType="textPassword"
...
