<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Kiekis"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expirationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Galiojimo pabaigos data"
            android:focusable="false"
            android:onClick="showDatePickerDialog"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frequencyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nustatyti priminimą" />

    <Switch
        android:id="@+id/editSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share Medicine"
        android:visibility="invisible"
        android:layout_marginTop="16dp"/>


</LinearLayout>



